--- a/GarciaMariaPablo/src/main/resources/templates/admin/_fragments/header.html
+++ b/GarciaMariaPablo/src/main/resources/templates/admin/_fragments/header.html
@@ -2,8 +2,8 @@
     <nav class="navbar navbar-expand-lg navbar-dark container px-3">
         <div class="container-fluid">
 
-            <a class="navbar-brand fw-bold d-flex align-items-center" href="../otros/dashboard.html" th:href="@{/admin/dashboard}"
-                title="Ir a la página principal del sistema">
+            <a class="navbar-brand fw-bold d-flex align-items-center" href="../otros/dashboard.html"
+                th:href="@{/admin/dashboard}" title="Ir a la página principal del sistema">
                 <i class="bi bi-person-fill-gear me-2"></i>
                 Panel de Administración
             </a>
@@ -93,7 +93,6 @@
                 <div class="d-flex align-items-center">
                     <th:block th:replace="~{_fragments/headerPerfil.html :: headerPerfil}"></th:block>
                 </div>
-
             </div>
         </div>
     </nav>
