--- a/GarciaMariaPablo/src/main/resources/templates/admin/_fragments/listarJS.html
+++ b/GarciaMariaPablo/src/main/resources/templates/admin/_fragments/listarJS.html
@@ -1,21 +1,13 @@
 <th:block th:fragment="import">
         <script defer src="../../../static/admin/javascript/reutilizables/gestionarDesplegablesFiltros.js"
-                th:src="@{/admin/javascript/reutilizables/gestionarDesplegablesFiltros.js}" type="text/javascript"
-                crossorigin="anonymous">
-                </script>
+                th:src="@{/admin/javascript/reutilizables/gestionarDesplegablesFiltros.js}"></script>
 
         <script defer src="../../../static/admin/javascript/reutilizables/buscarDesplegablesFiltros.js"
-                th:src="@{/admin/javascript/reutilizables/buscarDesplegablesFiltros.js}" type="text/javascript"
-                crossorigin="anonymous">
-                </script>
+                th:src="@{/admin/javascript/reutilizables/buscarDesplegablesFiltros.js}"></script>
 
         <script defer src="../../../static/js/params/modificarParams.js"
-                th:src="@{/js/params/modificarParams.js}" type="text/javascript"
-                crossorigin="anonymous">
-                </script>
+                th:src="@{/js/params/modificarParams.js}"></script>
 
         <script defer src="../../../static/admin/javascript/reutilizables/ordenarColumnas.js"
-                th:src="@{/admin/javascript/reutilizables/ordenarColumnas.js}" type="text/javascript"
-                crossorigin="anonymous">
-                </script>
-</th:block>p
+                th:src="@{/admin/javascript/reutilizables/ordenarColumnas.js}"></script>
+</th:block>
