--- a/GarciaMariaPablo/src/main/resources/templates/_fragments/paginacion.html
+++ b/GarciaMariaPablo/src/main/resources/templates/_fragments/paginacion.html
@@ -10,15 +10,13 @@
         </form>
 
         <p class="text-muted small mb-0">
-            Mostrando
-            <span th:text="${mostrandoAhora}">5</span>
+            Mostrando <span th:text="${mostrandoAhora}">5</span>
             <span th:text="${mostrandoAhora == 1 ? 'elemento' : 'elementos'}">elementos</span>
         </p>
 
         <ul class="pagination mb-0 h-auto">
 
             <li class="page-item" th:classappend="${paginaActual == 1} ? 'disabled'">
-                
                 <button type="button" class="page-link d-flex justify-content-center align-items-center h-100"
                     th:data-page="${paginaActual-1}" onclick="changePage(this)" th:disabled="${paginaActual == 1}">
                     <i class="bi bi-chevron-left"></i>
@@ -32,9 +30,8 @@
                         th:attr="max=${paginaFinal}" th:data-paginaActual="${paginaActual}"
                         class="form-control form-control-sm text-center w-auto me-2" th:value="${paginaActual}"
                         onchange="goToPage()" pattern="\d+">
-                    <span class="small">
-                        de <span th:text="${paginaFinal}">10</span>
-                    </span>
+                    <span class="small">de</span>
+                    <span class="small" th:text="${paginaFinal}">10</span>
                 </span>
             </li>
 
