--- a/GarciaMariaPablo/src/main/resources/templates/_fragments/popUpMessages.html
+++ b/GarciaMariaPablo/src/main/resources/templates/_fragments/popUpMessages.html
@@ -1,23 +1,21 @@
 <div th:fragment="popUpMessages">
-<div th:classappend="${error == null or error.isEmpty()} ? 'd-none' : ''"
-    class="alert alert-danger alert-dismissible fade show d-flex align-items-center my-4 mw-50vw mx-auto" >
-    <div class="position-relative pe-4 w-100 text-center">
-        <i class="bi bi-exclamation-triangle-fill me-2"></i>
-        <span class="visually-hidden fw-bold">Error:</span>
-        <span th:text="${error}" id="errorTextMessage">Se ha producido un error inesperado.</span>
-        <button type="button" class="btn-close top-50 translate-middle-y"
-            data-bs-dismiss="alert"></button>
+    <div th:classappend="${error == null or error.isEmpty()} ? 'd-none' : ''"
+        class="alert alert-danger alert-dismissible fade show d-flex align-items-center my-4 mw-50vw mx-auto">
+        <div class="position-relative pe-4 w-100 text-center">
+            <i class="bi bi-exclamation-triangle-fill me-2"></i>
+            <span class="visually-hidden fw-bold">Error:</span>
+            <span th:text="${error}" id="errorTextMessage">Se ha producido un error inesperado.</span>
+            <button type="button" class="btn-close top-50 translate-middle-y" data-bs-dismiss="alert"></button>
+        </div>
     </div>
-</div>
 
-<div th:classappend="${info == null or info.isEmpty()} ? 'd-none' : ''"
-    class="alert alert-info alert-dismissible fade show d-flex align-items-center my-4 mw-50vw mx-auto">
-    <div class="position-relative pe-4 w-100 text-center">
-        <i class="bi bi-info-circle-fill me-2"></i>
-        <span class="visually-hidden fw-bold">Información:</span>
-        <span th:text="${info}" id="infoTextMessage">Mensaje informativo</span>
-        <button type="button" class="btn-close top-50 translate-middle-y"
-            data-bs-dismiss="alert"></button>
+    <div th:classappend="${info == null or info.isEmpty()} ? 'd-none' : ''"
+        class="alert alert-info alert-dismissible fade show d-flex align-items-center my-4 mw-50vw mx-auto">
+        <div class="position-relative pe-4 w-100 text-center">
+            <i class="bi bi-info-circle-fill me-2"></i>
+            <span class="visually-hidden fw-bold">Información:</span>
+            <span th:text="${info}" id="infoTextMessage">Mensaje informativo</span>
+            <button type="button" class="btn-close top-50 translate-middle-y" data-bs-dismiss="alert"></button>
+        </div>
     </div>
-</div>
 </div>
