--- a/GarciaMariaPablo/src/main/resources/templates/admin/incidencia/inspeccionar.html
+++ b/GarciaMariaPablo/src/main/resources/templates/admin/incidencia/inspeccionar.html
@@ -12,32 +12,26 @@
 </head>
 
 <body class="d-flex flex-column h-100 bg-light">
-
     <header th:replace="~{admin/_fragments/header.html :: header}"></header>
 
-    <main class="container flex-grow-1 my-4" >
+    <main class="container flex-grow-1 my-4">
         <div th:replace="~{_fragments/popUpMessages.html :: popUpMessages}"></div>
 
         <article class="card border-0 shadow rounded-3 overflow-hidden">
             <header class="card-header bg-main text-white rounded-top-3 p-3">
                 <div class="d-flex justify-content-between align-items-center">
                     <h1 class="h5 mb-0">
-                        <i class="bi bi-file-earmark-text me-2"></i>
-                        Detalle de Incidencia
+                        <i class="bi bi-file-earmark-text me-2"></i>Detalle de Incidencia
                     </h1>
                     <span class="status-badge fw-bold" th:text="${incidencia.estado.nombre}"
-                        th:style="'background-color: '+${incidencia.estado.colorFondo}+';color: '+${incidencia.estado.colorTexto}">
-                        Pendiente
-                    </span>
+                        th:style="'background-color: '+${incidencia.estado.colorFondo}+';color: '+${incidencia.estado.colorTexto}">Pendiente</span>
                 </div>
             </header>
 
             <div class="card-body p-4">
-
                 <section class="mb-4 pb-3 border-bottom">
                     <h2 id="titulo-incidencia" class="h4 mb-3 txt-main" th:text="${incidencia.titulo}">
-                        <i class="bi bi-file-earmark-text me-2"></i>
-                        Falla en el servidor
+                        <i class="bi bi-file-earmark-text me-2"></i>Falla en el servidor
                     </h2>
                 </section>
 
@@ -117,8 +111,7 @@
         </article>
     </main>
 
-    <div class="modal fade" id="confirmarEliminacionModal" tabindex="-1" 
-        >
+    <div class="modal fade" id="confirmarEliminacionModal" tabindex="-1">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header bg-danger text-white">
@@ -132,7 +125,7 @@
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
                     <form th:action="@{'/admin/incidencias/' + ${incidencia.id}}" method="post">
                         <input type="hidden" name="_method" value="delete" />
-                        <input type="submit" class="btn btn-danger" value="Eliminar">
+                        <input type="submit" class="btn btn-danger" value="Eliminar" />
                     </form>
                 </div>
             </div>
