--- a/GarciaMariaPablo/src/main/resources/templates/global/_fragments/header.html
+++ b/GarciaMariaPablo/src/main/resources/templates/global/_fragments/header.html
@@ -14,22 +14,32 @@
             <div class="collapse navbar-collapse" id="navbarGlobal">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0 gap-lg-2">
                     <li class="nav-item" th:classappend="${activeTab.equals('/')} ? 'active'">
-                        <a class="nav-link" th:href="@{/}" href="../index.html" title="Página de inicio">Inicio</a>
+                        <a class="nav-link" th:href="@{/}" href="../index.html" title="Página de inicio">
+                            <span>Inicio</span>
+                        </a>
                     </li>
                     <li class="nav-item" th:classappend="${activeTab.contains('/nosotros')} ? 'active'">
-                        <a class="nav-link" th:href="@{/nosotros}" title="Conocer al equipo de desarrollo"
-                            href="../quienes-somos.html">Quiénes somos</a>
+                        <a class="nav-link" th:href="@{/nosotros}" href="../quienes-somos.html"
+                            title="Conocer al equipo de desarrollo">
+                            <span>Quiénes somos</span>
+                        </a>
                     </li>
                     <li class="nav-item" th:classappend="${activeTab.contains('/contacto')} ? 'active'">
-                        <a class="nav-link" href="../contacto.html" th:href="@{/contacto}"
-                            title="Formulario de contacto">Contacto</a>
+                        <a class="nav-link" th:href="@{/contacto}" href="../contacto.html"
+                            title="Formulario de contacto">
+                            <span>Contacto</span>
+                        </a>
                     </li>
                     <li class="nav-item" th:classappend="${activeTab.contains('/faq')} ? 'active'">
-                        <a class="nav-link" th:href="@{/faq}" href="../faq.html" title="Preguntas frecuentes">FAQ</a>
+                        <a class="nav-link" th:href="@{/faq}" href="../faq.html" title="Preguntas frecuentes">
+                            <span>FAQ</span>
+                        </a>
                     </li>
                     <li class="nav-item" th:classappend="${activeTab.contains('/politica-privacidad')} ? 'active'">
                         <a class="nav-link" th:href="@{/politica-privacidad}" href="../politica-privacidad.html"
-                            title="Política de privacidad">Privacidad</a>
+                            title="Política de privacidad">
+                            <span>Privacidad</span>
+                        </a>
                     </li>
                 </ul>
 
@@ -40,56 +50,55 @@
         </div>
     </nav>
 
-    <div class="offcanvas offcanvas-start text-bg-dark" tabindex="-P" id="menuLateral">
+    <div class="offcanvas offcanvas-start text-bg-dark" tabindex="-1" id="menuLateral">
         <div class="offcanvas-header border-bottom">
-            <h5 class="offcanvas-title fw-bold">Menú Global</h5>
+            <h2 class="offcanvas-title fw-bold">Menú Global</h2>
             <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas"></button>
         </div>
         <div class="offcanvas-body d-flex flex-column gap-2">
             <a th:href="@{/}" href="../index.html" class="nav-link" title="Volver al inicio">
-                <i class="bi bi-house me-2"></i>Inicio
+                <i class="bi bi-house me-2"></i><span>Inicio</span>
             </a>
             <a th:href="@{/nosotros}" href="../quienes-somos.html" class="nav-link"
                 title="Ver información sobre el equipo">
-                <i class="bi bi-people me-2"></i>Quiénes somos
+                <i class="bi bi-people me-2"></i><span>Quiénes somos</span>
             </a>
             <a th:href="@{/contacto}" href="../contacto.html" class="nav-link" title="Ir a la página de contacto">
-                <i class="bi bi-envelope me-2"></i>Contacto
+                <i class="bi bi-envelope me-2"></i><span>Contacto</span>
             </a>
             <a th:href="@{/faq}" href="../faq.html" class="nav-link" title="Consultar preguntas frecuentes">
-                <i class="bi bi-question-circle me-2"></i>Preguntas frecuentes
+                <i class="bi bi-question-circle me-2"></i><span>Preguntas frecuentes</span>
             </a>
             <a th:href="@{/politica-privacidad}" href="../politica-privacidad.html" class="nav-link"
                 title="Ver política de privacidad">
-                <i class="bi bi-shield-lock me-2"></i>Política de privacidad
+                <i class="bi bi-shield-lock me-2"></i><span>Política de privacidad</span>
             </a>
 
             <hr class="border-secondary my-3">
 
             <div class="offcanvas-footer p-3 bg-dark">
                 <div sec:authorize="isAuthenticated()" class="d-grid gap-2">
-                    <a href="../../user/otros/dashboard.html" th:href="@{/dashboard}" title="Ir al dashboard" class="btn btn-outline-main">
-                        <i class="bi bi-people me-2"></i>Volver al dashboard.
+                    <a th:href="@{/dashboard}" href="../../user/otros/dashboard.html" class="btn btn-outline-main"
+                        title="Ir al dashboard">
+                        <i class="bi bi-people me-2"></i><span>Volver al dashboard</span>
                     </a>
-                    <a href="../perfil.html" th:href="@{/perfil}" title="Ir a mi perfil" class="btn btn-outline-info">
-                        <i class="bi bi-people me-2"></i>Perfil
+                    <a th:href="@{/perfil}" href="../perfil.html" class="btn btn-outline-info" title="Ir a mi perfil">
+                        <i class="bi bi-people me-2"></i><span>Perfil</span>
                     </a>
                     <form th:action="@{/logout}" method="post" class="d-grid">
-                        <!-- No se pone input por que tiene un icono -->
+                        <!-- No se usa <input> porque incluye icono -->
                         <button type="submit" class="btn btn-outline-danger">
-                            <i class="bi bi-box-arrow-left me-2"></i>Cerrar sesión
+                            <i class="bi bi-box-arrow-left me-2"></i><span>Cerrar sesión</span>
                         </button>
                     </form>
                 </div>
                 <div sec:authorize="!isAuthenticated()" class="d-grid gap-2">
-                    <a href="../global/login.html" th:href="@{/login}" class="btn btn-outline-light"
+                    <a th:href="@{/login}" href="../global/login.html" class="btn btn-outline-light"
                         title="Acceder a tu cuenta">
-                        <i class="bi bi-box-arrow-in-right me-1"></i>
-                        Iniciar sesión
+                        <i class="bi bi-box-arrow-in-right me-1"></i><span>Iniciar sesión</span>
                     </a>
-                    <a href="/register" th:href="@{/register}" class="btn btn-light" title="Crear una cuenta nueva">
-                        <i class="bi bi-person-plus me-1"></i>
-                        Registrarse
+                    <a th:href="@{/register}" href="/register" class="btn btn-light" title="Crear una cuenta nueva">
+                        <i class="bi bi-person-plus me-1"></i><span>Registrarse</span>
                     </a>
                 </div>
             </div>
