--- a/GarciaMariaPablo/src/main/resources/templates/global/quienes-somos.html
+++ b/GarciaMariaPablo/src/main/resources/templates/global/quienes-somos.html
@@ -8,132 +8,123 @@
     <meta name="description"
         content="Conoce al equipo detrás del Sistema de Gestión de Incidencias. Expertos en desarrollo de software y soporte técnico.">
     <meta name="author" content="Pablo Garcia Maria">
-
     <th:block th:replace="~{_fragments/head.html :: head}"></th:block>
 </head>
 
 <body class="d-flex flex-column h-100 bg-light">
 
-    <th:block th:replace="~{global/_fragments/header.html :: headerGlobal}"></th:block>
-    <th:block th:replace="~{_fragments/popUpMessages.html :: popUpMessages}"></th:block>
+    <header th:replace="~{global/_fragments/header.html :: headerGlobal}"></header>
+    <div th:replace="~{_fragments/popUpMessages.html :: popUpMessages}"></div>
 
     <main class="flex-grow-1 container my-5">
-
         <div class="bg-white shadow-sm rounded-3 p-4 p-md-5">
-            <h1 class="mb-4 border-bottom pb-3 fw-bold text-center txt-main">Quiénes somos</h1>
+            <h1 class="mb-4 border-bottom pb-3 fw-bold text-center txt-main"><span>Quiénes somos</span></h1>
 
             <section class="mb-5">
                 <p class="lead text-center">
-                    Somos el equipo detrás del <span class="fw-bold">Sistema de Gestión de Incidencias</span>, una
-                    solución tecnológica diseñada para optimizar el manejo de fallos técnicos y reportes en entornos
-                    empresariales.
+                    <span>Somos el equipo detrás del </span><span class="fw-bold">Sistema de Gestión de
+                        Incidencias</span><span>, una solución tecnológica diseñada para optimizar el manejo de fallos
+                        técnicos y reportes en entornos empresariales.</span>
                 </p>
                 <p>
-                    Nuestra plataforma centraliza y automatiza el proceso de seguimiento de incidencias, reduciendo
-                    tiempos de respuesta y mejorando la comunicación entre equipos técnicos y usuarios finales.
+                    <span>Nuestra plataforma centraliza y automatiza el proceso de seguimiento de incidencias,
+                        reduciendo tiempos de respuesta y mejorando la comunicación entre equipos técnicos y usuarios
+                        finales.</span>
                 </p>
             </section>
 
             <section class="mb-5">
-                <h2 class="h4 fw-semibold mb-3">Nuestra misión</h2>
+                <h2 class="h4 fw-semibold mb-3"><span>Nuestra misión</span></h2>
                 <p>
-                    Proporcionar herramientas intuitivas y seguras que simplifiquen la gestión de incidencias,
-                    permitiendo a las organizaciones enfocarse en resolver problemas en lugar de perder tiempo en
-                    procesos manuales.
+                    <span>Proporcionar herramientas intuitivas y seguras que simplifiquen la gestión de incidencias,
+                        permitiendo a las organizaciones enfocarse en resolver problemas en lugar de perder tiempo en
+                        procesos manuales.</span>
                 </p>
             </section>
 
             <section class="mb-5">
-                <h2 class="h4 fw-semibold mb-3">Nuestros valores</h2>
+                <h2 class="h4 fw-semibold mb-3"><span>Nuestros valores</span></h2>
                 <ul class="list-unstyled">
-                    <li class="mb-2">
-                        <i class="bi bi-check-circle text-success me-2"></i>
-                        <span class="fw-bold">Innovación:</span> Mejora continua de nuestras soluciones.
-                    </li>
-                    <li class="mb-2">
-                        <i class="bi bi-check-circle text-success me-2"></i>
-                        <span class="fw-bold">Fiabilidad:</span> Sistemas estables con uptime del 99.9%.
-                    </li>
-                    <li class="mb-2">
-                        <i class="bi bi-check-circle text-success me-2"></i>
-                        <span class="fw-bold">Soporte proactivo:</span> Respuesta en menos de 2 horas.
-                    </li>
+                    <li class="mb-2"><i class="bi bi-check-circle text-success me-2"></i><span
+                            class="fw-bold">Innovación:</span> <span>Mejora continua de nuestras soluciones.</span></li>
+                    <li class="mb-2"><i class="bi bi-check-circle text-success me-2"></i><span
+                            class="fw-bold">Fiabilidad:</span> <span>Sistemas estables con uptime del 99.9%.</span></li>
+                    <li class="mb-2"><i class="bi bi-check-circle text-success me-2"></i><span class="fw-bold">Soporte
+                            proactivo:</span> <span>Respuesta en menos de 2 horas.</span></li>
                 </ul>
             </section>
 
             <section class="mb-5">
-                <h2 class="h4 fw-semibold mb-3 text-center">Equipo técnico</h2>
+                <h2 class="h4 fw-semibold mb-3 text-center"><span>Equipo técnico</span></h2>
                 <div id="equipoCarrusel" class="carousel slide carousel-fade shadow-sm rounded-3 overflow-hidden"
                     data-bs-ride="carousel">
                     <div class="carousel-inner text-center">
                         <div class="carousel-item active">
-                            <img src="../../../static/img/banners/GarciaMariaPablo.png"
-                                th:src="@{/img/banners/GarciaMariaPablo.png}" class="d-block mx-auto img-fluid w-75"
+                            <img src="/img/banners/GarciaMariaPablo.png" th:src="@{/img/banners/GarciaMariaPablo.png}"
+                                class="d-block mx-auto img-fluid w-75"
                                 alt="Pablo Garcia Maria - Desarrollador y Gestor de la web">
                         </div>
                         <div class="carousel-item">
-                            <img src="../../../static/img/banners/PerezMarquezGabriel.png"
+                            <img src="/img/banners/PerezMarquezGabriel.png"
                                 th:src="@{/img/banners/PerezMarquezGabriel.png}" class="d-block mx-auto img-fluid w-75"
                                 alt="Gabriel Perez Marquez - Tester 1">
                         </div>
                         <div class="carousel-item">
-                            <img src="../../../static/img/banners/MontanesRamosRoberto.png"
+                            <img src="/img/banners/MontanesRamosRoberto.png"
                                 th:src="@{/img/banners/MontanesRamosRoberto.png}" class="d-block mx-auto img-fluid w-75"
                                 alt="Roberto Montañes Ramos - Tester 2">
                         </div>
                         <div class="carousel-item">
-                            <img src="../../../static/img/banners/ZamoranoRodriguezJesus.png"
+                            <img src="/img/banners/ZamoranoRodriguezJesus.png"
                                 th:src="@{/img/banners/ZamoranoRodriguezJesus.png}"
                                 class="d-block mx-auto img-fluid w-75" alt="Jesús Zamorano Rodríguez - Tester 3">
                         </div>
                         <div class="carousel-item">
-                            <img src="../../../static/img/banners/DiazGardunoPedro.png"
-                                th:src="@{/img/banners/DiazGardunoPedro.png}" class="d-block mx-auto img-fluid w-75"
-                                alt="Pedro Díaz Garduño - Tester 4">
+                            <img src="/img/banners/DiazGardunoPedro.png" th:src="@{/img/banners/DiazGardunoPedro.png}"
+                                class="d-block mx-auto img-fluid w-75" alt="Pedro Díaz Garduño - Tester 4">
                         </div>
                         <div class="carousel-item">
-                            <img src="../../../static/img/banners/DiosFiestasGonzaloAntonio.png"
+                            <img src="/img/banners/DiosFiestasGonzaloAntonio.png"
                                 th:src="@{/img/banners/DiosFiestasGonzaloAntonio.png}"
                                 class="d-block mx-auto img-fluid w-75" alt="Gonzalo Antonio Dios Fiestas - Tester 5">
                         </div>
                         <div class="carousel-item">
-                            <img src="../../../static/img/banners/SerranoRuizMauro.png"
-                                th:src="@{/img/banners/SerranoRuizMauro.png}" class="d-block mx-auto img-fluid w-75"
-                                alt="Mauro Serrano Ruiz - Tester 6">
+                            <img src="/img/banners/SerranoRuizMauro.png" th:src="@{/img/banners/SerranoRuizMauro.png}"
+                                class="d-block mx-auto img-fluid w-75" alt="Mauro Serrano Ruiz - Tester 6">
                         </div>
                         <div class="carousel-item">
-                            <img src="../../../static/img/banners/NaranjoGonzalezAngel.png"
+                            <img src="/img/banners/NaranjoGonzalezAngel.png"
                                 th:src="@{/img/banners/NaranjoGonzalezAngel.png}" class="d-block mx-auto img-fluid w-75"
                                 alt="Ángel Naranjo González - Profesor de Java y Spring Boot">
                         </div>
                         <div class="carousel-item">
-                            <img src="../../../static/img/banners/VillarLinanRafael.png"
-                                th:src="@{/img/banners/VillarLinanRafael.png}" class="d-block mx-auto img-fluid w-75"
+                            <img src="/img/banners/VillarLinanRafael.png" th:src="@{/img/banners/VillarLinanRafael.png}"
+                                class="d-block mx-auto img-fluid w-75"
                                 alt="Rafael Villar Liñán - Profesor de HTML, CSS y Thymeleaf">
                         </div>
                         <div class="carousel-item">
-                            <img src="../../../static/img/banners/LopezMaganaLuisMiguel.png"
+                            <img src="/img/banners/LopezMaganaLuisMiguel.png"
                                 th:src="@{/img/banners/LopezMaganaLuisMiguel.png}"
                                 class="d-block mx-auto img-fluid w-75"
                                 alt="Luis Miguel López Magaña - Profesor de Spring Security">
                         </div>
                         <div class="carousel-item">
-                            <img src="../../../static/img/banners/CamposRiveraMiguel.png"
+                            <img src="/img/banners/CamposRiveraMiguel.png"
                                 th:src="@{/img/banners/CamposRiveraMiguel.png}" class="d-block mx-auto img-fluid w-75"
                                 alt="Miguel Campos Rivera - Profesor de Expresiones Regulares">
                         </div>
                         <div class="carousel-item">
-                            <img src="../../../static/img/banners/ChatGPT.png" th:src="@{/img/banners/ChatGPT.png}"
+                            <img src="/img/banners/ChatGPT.png" th:src="@{/img/banners/ChatGPT.png}"
                                 class="d-block mx-auto img-fluid w-75"
                                 alt="ChatGPT - Mención Honorífica 'El creador de Errores'">
                         </div>
                         <div class="carousel-item">
-                            <img src="../../../static/img/banners/DeepSeek.png" th:src="@{/img/banners/DeepSeek.png}"
+                            <img src="/img/banners/DeepSeek.png" th:src="@{/img/banners/DeepSeek.png}"
                                 class="d-block mx-auto img-fluid w-75" alt="DeepSeek - Mención Honorífica">
                         </div>
                         <div class="carousel-item">
-                            <img src="../../../static/img/banners/StackOverflow.png"
-                                th:src="@{/img/banners/StackOverflow.png}" class="d-block mx-auto img-fluid w-75"
+                            <img src="/img/banners/StackOverflow.png" th:src="@{/img/banners/StackOverflow.png}"
+                                class="d-block mx-auto img-fluid w-75"
                                 alt="StackOverflow - Mención Honorífica 'Lo que antes era ChatGPT'">
                         </div>
                     </div>
@@ -154,7 +145,7 @@
             <section class="text-center mt-5">
                 <a th:href="@{/contacto}" href="contacto.html" class="btn btn-main text-light"
                     title="Ir al formulario de contacto">
-                    <i class="bi bi-envelope-fill me-1"></i> Contactar con el equipo
+                    <i class="bi bi-envelope-fill me-1"></i><span>Contactar con el equipo</span>
                 </a>
             </section>
         </div>
